tests/snapshots/examples_fixtures/type_system__12_adt_nested.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/12_adt_nested.flx
== compile ==
failed (compile)
== diagnostics ==
error[E015]: Non-Exhaustive Match

Match is non-exhaustive without an unguarded catch-all arm.

  examples/type_system/12_adt_nested.flx:8:9
   |
 8 |         match t {
   |         ^^^^^^^^^
 9 |             Leaf -> Node(Leaf, v, Leaf),
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
10 |             Node(left, x, right) ->
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
11 |             if v < x {
   | ^^^^^^^^^^^^^^^^^^^^^^
12 |                 Node(insert(left, v), x, right)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
13 |             } else if v > x {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
14 |             Node(left, x, insert(right, v))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
15 |         } else {
   | ^^^^^^^^^^^^^^^^
16 |         t
   | ^^^^^^^^^
17 |     },
   | ^^^^^^
18 | }
   | ^

Hint:
  Add an unguarded `_ -> ...` arm for conservative exhaustive coverage.


error[E015]: Non-Exhaustive Match

Match is non-exhaustive without an unguarded catch-all arm.

  examples/type_system/12_adt_nested.flx:22:5
   |
22 |     match t {
   |     ^^^^^^^^^
23 |         Leaf -> false,
   | ^^^^^^^^^^^^^^^^^^^^^^
24 |         Node(left, x, right) ->
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
25 |         if v == x { true }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
26 |         else if v < x { contains(left, v) }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
27 |         else { contains(right, v) },
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
28 |     }
   | ^^^^^

Hint:
  Add an unguarded `_ -> ...` arm for conservative exhaustive coverage.


error[E300]: Return Type Mismatch

The body of `inorder` does not match its declared return type.

  examples/type_system/12_adt_nested.flx:32:5
   |
31 | fn inorder(t: Tree) -> Array {
   |                        ----- `inorder` was declared to return `Array`
32 |     match t {
   |     ^^^^^^^^^
33 |         Leaf -> [||],
   | ^^^^^^^^^^^^^^^^^^^^^
34 |         Node(left, x, right) ->
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
35 |         concat(inorder(left), concat([|x|], inorder(right))),
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
36 |     }
   | ^^^^^

Note:
  declared return type: Array
  body type: Array<Int>

Help:
  Return a `Array` value from `inorder` or change its annotation.


error[E004]: Undefined Variable

I can't find a value named `Leaf`.

  examples/type_system/12_adt_nested.flx:39:37
   |
39 | let t = insert(insert(insert(insert(Leaf, 5), 3), 7), 1)
   |                                     ^^^^

Hint:
  Define it first: let Leaf = ...;

Found 4 errors.
== stdout ==
<not executed>
